--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -59,10 +59,12 @@
                             {{localize (concat "PENDRAGON." (capital @key))}}
                         </label>
                         <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" disabled/>
-                        <button class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}">+</button>
+                        <span class="flexrow">
+                            <a class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}"><i class="fas fa-caret-left fa-xl"></i></a>
                         {{/if}}
                         {{#if @last}}
-                        <button class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}">+</button>
+                            <a class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}"><i class="fas fa-caret-right fa-xl"></i></a>
+                        </span>
                         <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" disabled/>
                         <label class="trait rollable" data-label="{{localize this.label}}" data-value="{{this.value}}">
                             {{localize (concat "PENDRAGON." (capital @key))}}
@@ -80,10 +82,10 @@
                             <img src="{{this.img}}" title="{{this.name}}"/>
                             <label>{{this.name}}{{#if this.system.target}} ({{this.system.target}}){{/if}}</label>
                             <input type="number" value="{{this.system.value}}"/>
-                            <button class="item-edit" data-item-id="{{this._id}}">=</button>
-                            <button class="item-delete" data-item-id="{{this._id}}">-</button>
+                            <a class="item-edit" data-item-id="{{this._id}}"><i class="fas fa-pen-to-square"></i></a>
+                            <a class="item-delete" data-item-id="{{this._id}}"><i class="fas fa-xmark"></i></a>
                         {{/each}}
-                        <button class="item-create" data-type="passion">+</button>
+                        <a class="item-create" data-type="passion"><i class="fas fa-plus"></i></a>
                     </div>
                 </div>
 
@@ -143,10 +145,10 @@
                             {{/with}}
                         </label>
                         <label>{{this.system.formula}}</label>
-                        <button class="item-edit" data-item-id="{{this._id}}">=</button>
-                        <button class="item-delete" data-item-id="{{this._id}}">-</button>
+                        <a class="item-edit" data-item-id="{{this._id}}"><i class="fas fa-pen-to-square"></i></a>
+                        <a class="item-delete" data-item-id="{{this._id}}"><i class="fas fa-xmark"></i></a>
                         {{/each}}
-                        <button class="item-create" data-type="weapon">+</button>
+                        <a class="item-create" data-type="weapon"><i class="fas fa-plus"></i></a>
                     </div>
 
                     {{!-- Combat Skills --}}
