--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -2,6 +2,12 @@
   /* || UTILITIES */
   .align-center {align-items: center;}
 
+  .summarize {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 8em;
+  }
 
   /* || CONTAINERS */
   .pen-grid {
@@ -56,14 +62,6 @@
 
   input[type="checkbox"] {
     width: 12px;
-  }
-
-  .item-name {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    max-width: 8em;
-    justify-self: start;
   }
 
   .pen-grid > .item-create {
@@ -181,7 +179,7 @@
     }
     .passions {
       grid-template-columns: 28px 28px min-content 28px 15px 15px;
-      .item-name {max-width: 11em;}
+      .summarize {max-width: 11em;}
     }
   }
 
@@ -211,7 +209,8 @@
     }
 
     .weapon-attacks {
-      grid-template-columns: 28px min-content 28px auto 15px 15px;
+      grid-template-columns: 28px min-content min-content min-content 15px 15px;
+      .summarize.formula {max-width: 3em;}
     }
 
     .health {
