--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -80,7 +80,7 @@
                         {{#each inventory.passion}}
                             <input class="item-checkbox" type="checkbox" data-item-id="{{this._id}}" {{checked this.system.isChecked}}/>
                             <img src="{{this.img}}" title="{{this.name}}"/>
-                            <label class="item-name">{{this.name}}{{#if this.system.target}} ({{this.system.target}}){{/if}}</label>
+                            <label class="summarize">{{this.name}}{{#if this.system.target}} ({{this.system.target}}){{/if}}</label>
                             <span>{{this.system.value}}</span>
                             <a class="item-edit" data-item-id="{{this._id}}"><i class="fas fa-pen-to-square"></i></a>
                             <a class="item-delete" data-item-id="{{this._id}}"><i class="fas fa-xmark"></i></a>
@@ -134,13 +134,13 @@
                     <div class="weapon-attacks pen-container pen-grid">
                         {{#each inventory.weapon}}
                         <img src="{{this.img}}" title="{{this.name}}"/>
-                        <label class="item-name">{{this.name}}</label>
+                        <label class="summarize">{{this.name}}</label>
                         <label>
                             {{#with (lookup ../actor.system.skills.combat system.skill)}}
                             {{value}}
                             {{/with}}
                         </label>
-                        <label>{{this.system.formula}}</label>
+                        <label class="summarize formula">{{this.system.formula}}</label>
                         <a class="item-edit" data-item-id="{{this._id}}"><i class="fas fa-pen-to-square"></i></a>
                         <a class="item-delete" data-item-id="{{this._id}}"><i class="fas fa-xmark"></i></a>
                         {{/each}}
