--- a/styles/pendragon.css
+++ b/styles/pendragon.css
@@ -1,4 +1,5 @@
 .pendragon {
+  /* || VARIABLES */
   /* || UTILITIES */
   /* || CONTAINERS */
   /* || GENERAL STYLES */
@@ -31,8 +32,8 @@
 }
 .pendragon .pen-container {
   outline: black solid 2px;
-  margin: 1em;
-  padding: 0.2em;
+  margin: 14px;
+  padding: 3px;
 }
 .pendragon input[type="text"] {
   background: #0000;
@@ -97,7 +98,6 @@
   display: grid;
   grid-template-columns: 2fr 3fr;
   grid-gap: 0.2em;
-  align-content: space-between;
 }
 .pendragon .sheet-header .personal div {
   display: flex;
@@ -152,6 +152,9 @@
 }
 .pendragon .tab.combat .combat-main {
   align-items: center;
+}
+.pendragon .tab.combat .combat-main .characteristics label {
+  margin-right: 0.2em;
 }
 .pendragon .tab.combat .combat-main .move-armor {
   justify-items: start;
