--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -1,4 +1,8 @@
 .pendragon {
+  /* || VARIABLES */
+  @gap: 0.5em;
+  @gap-small: 0.2em;
+
   /* || UTILITIES */
   .align-center {align-items: center;}
 
@@ -16,8 +20,8 @@
     justify-content: center;
     justify-items: center;
     align-items: center;
-    column-gap: 0.5em;
-    row-gap: 0.2em;
+    column-gap: @gap;
+    row-gap: @gap-small;
   }
 
   .flex-container {
@@ -29,8 +33,8 @@
 
   .pen-container {
     outline: black solid 2px;
-    margin: 1em;
-    padding: 0.2em;
+    margin: 14px;
+    padding: 3px;
   }
 
   /* || GENERAL STYLES */
@@ -122,7 +126,6 @@
       display: grid;
       grid-template-columns: 2fr 3fr;
       grid-gap: 0.2em;
-      align-content: space-between;
       div {
         display: flex;
         align-items: baseline;
@@ -186,6 +189,11 @@
   .tab.combat {
     .combat-main {
       align-items: center;
+      .characteristics {
+        label {
+          margin-right: @gap-small;
+        }
+      }
       .move-armor {
         justify-items: start;
         align-tracks: center;
