--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -39,6 +39,7 @@
         <a class="item" data-tab="play"><i class="far fa-masks-theater"></i></a>
         <a class="item" data-tab="combat"><i class="far fa-swords"></i></a>
         <a class="item" data-tab="possessions"><i class="far fa-boxes-stacked"></i></a>
+        <a class="item" data-tab="history"><i class="far fa-scroll-old"></i></a>
     </nav>
 
     {{!-- Sheet Body --}}
@@ -217,6 +218,11 @@
 
         {{!-- Possessions Tab --}}
         <div class="tab possessions" data-group="primary" data-tab="possessions">
+
+        </div>
+
+        {{!-- History Tab --}}
+        <div class="tab history" data-group="primary" data-tab="history">
 
         </div>
     </section>
