--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -288,3 +288,12 @@
   min-width: 460px;
   min-height: 400px;
 }
+
+.chat-message > .message-header > .flavor-text {
+  .result {
+    .criticalSuccess {color: blue}
+    .success {color: green}
+    .failure {color: orangered}
+    .fumble {color: red}
+  }
+}
