--- a/styles/pendragon.css
+++ b/styles/pendragon.css
@@ -40,6 +40,9 @@
   align-items: flex-start;
   gap: 0.5em 1em;
 }
+.pendragon .flex-list span {
+  display: inline-block;
+}
 .pendragon .pen-container {
   outline: black solid 2px;
   margin: 14px;
@@ -65,6 +68,9 @@
 }
 .pendragon a.active > i.far {
   font-weight: 900;
+}
+.pendragon [contenteditable="true"] {
+  min-width: 2em;
 }
 .pendragon .window-content {
   height: 100%;
