--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -42,6 +42,9 @@
     flex-wrap: wrap;
     align-items: flex-start;
     gap: @gap @gap-large;
+    span {
+      display: inline-block;
+    }
   }
 
   .pen-container {
@@ -88,6 +91,10 @@
 
   a.active > i.far {
     font-weight: 900; // Icons fill in when active
+  }
+
+  [contenteditable="true"] {
+    min-width: 2em;
   }
 
   /* || OTHER */
