removed unused class

--- a/templates/actor-sheet.hbs
+++ b/templates/actor-sheet.hbs
@@ -225,7 +225,7 @@
         <div class="tab history" data-group="primary" data-tab="history">
             <div class="flex-list">
                 {{#each actor.system.history.knightly}}
-                <span class="inline-form-pair">
+                <span>
                     <label>{{localize (concat "PENDRAGON." (capital @key))}}</label>
                     <span class="underline" type="text" name="system.history.knightly.{{@key}}.value" value="{{this.value}}" data-edit="system.history.knightly.{{@key}}.value" contenteditable="true"/>{{this.value}}</span>
                 </span>
