--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -258,6 +258,15 @@
     }
   }
 
+  .tab.history {
+    .passive-glory {
+      grid-template-columns: min-content 28px;
+      label {
+        justify-self: start;
+      }
+    }
+  }
+
   /* Sheet Tabs */
   .tabs {
     flex: 0 0 40px;
