--- a/styles/pendragon.css
+++ b/styles/pendragon.css
@@ -48,6 +48,12 @@
   margin: 14px;
   padding: 3px;
 }
+.pendragon table {
+  table-layout: fixed;
+}
+.pendragon i {
+  margin: 0;
+}
 .pendragon input[type="text"] {
   background: #0000;
   border: 0;
@@ -58,6 +64,21 @@
   height: 28px;
   width: 28px;
   text-align: center;
+}
+.pendragon .header {
+  position: relative;
+  margin: 0 14px;
+}
+.pendragon .header button {
+  position: absolute;
+  right: 0;
+  bottom: -1px;
+  width: auto;
+  border-radius: 2px 2px 0 0;
+  border: 1px solid var(--color-underline-header);
+  background: rgba(0, 0, 0, 0);
+  line-height: 1.2em;
+  margin: 0;
 }
 .pendragon input[type="checkbox"] {
   width: 12px;
