--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -4,6 +4,8 @@
   @gap: 0.5em;
   @gap-small: 0.2em;
 
+  @section-margin: 14px;
+
   /* || UTILITIES */
   .align-center {align-items: center;}
 
@@ -49,11 +51,19 @@
 
   .pen-container {
     outline: black solid 2px;
-    margin: 14px;
+    margin: @section-margin;
     padding: 3px;
   }
 
   /* || GENERAL STYLES */
+  table {
+    table-layout: fixed;
+  }
+
+  i {
+    margin: 0;
+  }
+
   input[type="text"] {
     background: #0000;
     border: 0;
@@ -65,6 +75,22 @@
     height: 28px;
     width: 28px;
     text-align: center;
+  }
+
+  .header {
+    position: relative;
+    margin: 0 @section-margin;
+    button {
+      position: absolute;
+      right: 0;
+      bottom: -1px;
+      width: auto;
+      border-radius: 2px 2px 0 0;
+      border: 1px solid var(--color-underline-header);
+      background: rgba(0, 0, 0, 0);
+      line-height: 1.2em;
+      margin: 0;
+    }
   }
 
   // .pen-number {
