--- a/templates/actor-sheet.hbs
+++ b/templates/actor-sheet.hbs
@@ -51,55 +51,70 @@
                 <div class="flex-container">
 
                     {{!-- Traits --}}
-                    <div class="traits pen-container pen-grid" data-category="Trait">
-                        {{#each actor.system.traits}}
-                        {{#each this}}
-                        {{#if @first}}
-                        <input type="checkbox" name="system.traits.{{@../index}}.{{@key}}.isChecked" {{checked this.isChecked}}/>
-                        <label class="rollable">
-                            {{localize (concat "PENDRAGON." (capital @key))}}
-                        </label>
-                        <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" disabled/>
-                        <span class="flexrow">
-                            <a class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}"><i class="fas fa-caret-left fa-xl"></i></a>
-                        {{/if}}
-                        {{#if @last}}
-                            <a class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}"><i class="fas fa-caret-right fa-xl"></i></a>
-                        </span>
-                        <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" disabled/>
-                        <label class="rollable">
-                            {{localize (concat "PENDRAGON." (capital @key))}}
-                        </label>                            
-                        <input type="checkbox" name="system.traits.{{@../index}}.{{@key}}.isChecked" {{checked this.isChecked}}/>
-                        {{/if}}
-                        {{/each}}
-                        {{/each}}
-                    </div>
+                    <section>
+                        <h2 class="header">
+                            {{localize "PENDRAGON.Traits"}}
+                        </h2>
+                        <div class="traits pen-container pen-grid" data-category="Trait">
+                            {{#each actor.system.traits}}
+                            {{#each this}}
+                            {{#if @first}}
+                            <input type="checkbox" name="system.traits.{{@../index}}.{{@key}}.isChecked" {{checked this.isChecked}}/>
+                            <label class="rollable">
+                                {{localize (concat "PENDRAGON." (capital @key))}}
+                            </label>
+                            <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" disabled/>
+                            <span class="flexrow">
+                                <a class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}"><i class="fas fa-caret-left fa-xl"></i></a>
+                            {{/if}}
+                            {{#if @last}}
+                                <a class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}"><i class="fas fa-caret-right fa-xl"></i></a>
+                            </span>
+                            <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" disabled/>
+                            <label class="rollable">
+                                {{localize (concat "PENDRAGON." (capital @key))}}
+                            </label>                            
+                            <input type="checkbox" name="system.traits.{{@../index}}.{{@key}}.isChecked" {{checked this.isChecked}}/>
+                            {{/if}}
+                            {{/each}}
+                            {{/each}}
+                        </div>
+                    </section>
 
                     {{!-- Passions --}}
-                    <div class="passions pen-container pen-grid" data-category="Passion">
-                        {{#each inventory.passion}}
-                            <input class="item-checkbox" type="checkbox" data-item-id="{{this._id}}" {{checked this.system.isChecked}}/>
-                            <img src="{{this.img}}" title="{{this.name}}"/>
-                            <label class="summarize rollable">{{this.name}}{{#if this.system.target}} ({{this.system.target}}){{/if}}</label>
-                            <input type="number" value="{{this.system.value}}" disabled/>
-                            <a class="item-edit" data-item-id="{{this._id}}"><i class="fas fa-pen-to-square"></i></a>
-                            <a class="item-delete" data-item-id="{{this._id}}"><i class="fas fa-xmark"></i></a>
-                        {{/each}}
-                        <a class="item-create" data-type="passion"><i class="fas fa-plus"></i></a>
-                    </div>
+                    <section>
+                        <h2 class="header">
+                            {{localize "PENDRAGON.Passions"}}
+                            <button class="item-create" data-type="passion"><i class="fas fa-plus"></i></button>
+                        </h2>
+                        <div class="passions pen-container pen-grid" data-category="Passion">
+                            {{#each inventory.passion}}
+                                <input class="item-checkbox" type="checkbox" data-item-id="{{this._id}}" {{checked this.system.isChecked}}/>
+                                <img src="{{this.img}}" title="{{this.name}}"/>
+                                <label class="summarize rollable">{{this.name}}{{#if this.system.target}} ({{this.system.target}}){{/if}}</label>
+                                <input type="number" value="{{this.system.value}}" disabled/>
+                                <a class="item-edit" data-item-id="{{this._id}}"><i class="fas fa-pen-to-square"></i></a>
+                                <a class="item-delete" data-item-id="{{this._id}}"><i class="fas fa-xmark"></i></a>
+                            {{/each}}
+                        </div>
+                    </section>
                 </div>
 
                 {{!-- General Skills --}}
-                <div class="skills pen-container pen-grid" data-category="Skill">
-                    {{#each actor.system.skills.general}}
-                    <input type="checkbox" name="system.skills.general.{{@key}}.isChecked" {{checked this.isChecked}}/>
-                    <label class="rollable" data-label="{{localize this.label}}" data-value="{{this.value}}">
-                        {{localize (concat "PENDRAGON." (capital @key))}}
-                    </label>
-                    <input type="number" name="system.skills.general.{{@key}}.value" value="{{this.value}}"/>
-                    {{/each}}
-                </div>
+                <section>
+                    <h2 class="header">
+                        {{localize "PENDRAGON.GeneralSkills"}}
+                    </h2>
+                    <div class="skills pen-container pen-grid" data-category="Skill">
+                        {{#each actor.system.skills.general}}
+                        <input type="checkbox" name="system.skills.general.{{@key}}.isChecked" {{checked this.isChecked}}/>
+                        <label class="rollable" data-label="{{localize this.label}}" data-value="{{this.value}}">
+                            {{localize (concat "PENDRAGON." (capital @key))}}
+                        </label>
+                        <input type="number" name="system.skills.general.{{@key}}.value" value="{{this.value}}"/>
+                        {{/each}}
+                    </div>
+                </section>
             </div>
         </div>
 
@@ -132,63 +147,78 @@
                 <div class="flex-container flex-combat">
 
                     {{!-- Weapon Attacks --}}
-                    <div class="weapon-attacks pen-container pen-grid">
-                        {{#each inventory.weapon}}
-                        <img src="{{this.img}}" title="{{this.name}}"/>
-                        <label class="summarize">{{this.name}}</label>
-                        <label>
-                            {{#with (lookup ../actor.system.skills.combat system.skill)}}
-                            {{value}}
-                            {{/with}}
-                        </label>
-                        <label class="summarize formula">{{this.system.formula}}</label>
-                        <a class="item-edit" data-item-id="{{this._id}}"><i class="fas fa-pen-to-square"></i></a>
-                        <a class="item-delete" data-item-id="{{this._id}}"><i class="fas fa-xmark"></i></a>
-                        {{/each}}
-                        <a class="item-create" data-type="weapon"><i class="fas fa-plus"></i></a>
-                    </div>
+                    <section>
+                        <h2 class="header">
+                            {{localize "PENDRAGON.Weapons"}}
+                            <button class="item-create" data-type="weapon"><i class="fas fa-plus"></i></button>
+                        </h2>
+                        <div class="weapon-attacks pen-container pen-grid">
+                            {{#each inventory.weapon}}
+                            <img src="{{this.img}}" title="{{this.name}}"/>
+                            <label class="summarize">{{this.name}}</label>
+                            <label>
+                                {{#with (lookup ../actor.system.skills.combat system.skill)}}
+                                {{value}}
+                                {{/with}}
+                            </label>
+                            <label class="summarize formula">{{this.system.formula}}</label>
+                            <a class="item-edit" data-item-id="{{this._id}}"><i class="fas fa-pen-to-square"></i></a>
+                            <a class="item-delete" data-item-id="{{this._id}}"><i class="fas fa-xmark"></i></a>
+                            {{/each}}
+                        </div>
+                    </section>
 
                     {{!-- Combat Skills --}}
-                    <div class="skills pen-container pen-grid" data-category="Skill">
-                        {{#each actor.system.skills.combat}}
-                        <input type="checkbox" name="system.skills.combat.{{@key}}.isChecked" {{checked this.isChecked}}/>
-                        <label class="rollable" data-label="{{localize this.label}}" data-value="{{this.value}}">
-                            {{localize (concat "PENDRAGON." (capital @key))}}
-                        </label>
-                        <input type="number" name="system.skills.combat.{{@key}}.value" value="{{this.value}}"/>
-                        {{/each}}
-                    </div>
+                    <section>
+                        <h2 class="header">
+                            {{localize "PENDRAGON.CombatSkills"}}
+                        </h2>
+                        <div class="skills pen-container pen-grid" data-category="Skill">
+                            {{#each actor.system.skills.combat}}
+                            <input type="checkbox" name="system.skills.combat.{{@key}}.isChecked" {{checked this.isChecked}}/>
+                            <label class="rollable" data-label="{{localize this.label}}" data-value="{{this.value}}">
+                                {{localize (concat "PENDRAGON." (capital @key))}}
+                            </label>
+                            <input type="number" name="system.skills.combat.{{@key}}.value" value="{{this.value}}"/>
+                            {{/each}}
+                        </div>
+                    </section>
 
                 </div>
                 <div class="flex-container flex-combat">
 
                     {{!-- Health --}}
-                    <div class="health pen-container">
-                        <h3>
-                            <abbr title="{{localize "PENDRAGON.HitPoints"}}">
-                                {{localize "PENDRAGON.HitPointsShort"}}
-                            </abbr>
-                            <input type="number" name="system.hp.value" value="{{actor.system.hp.value}}"/> / {{actor.system.hp.max}}
-                        </h3>
-                        <h5>
-                            Debilitated
-                            <input type="checkbox" name="system.debilitated" {{checked actor.system.debilitated}}/>
-                        </h5>
-                        <h4>
-                            Aggravated
-                            <input type="number" name="system.damage.aggravated" value="{{actor.system.damage.aggravated}}"/>
-                        </h4>
-                        <h4>
-                            Deterioration
-                            <input type="number" name="system.damage.deterioration" value="{{actor.system.damage.deterioration}}"/>
-                        </h4>
-                        <div class="health-derived pen-grid">    
-                            <span>{{localize "PENDRAGON.Healing"}}</span><span>{{actor.system.derived.healing}}</span>
-                            <span>{{localize "PENDRAGON.Knockdown"}}</span><span>{{actor.system.derived.knockdown}}</span>
-                            <span>{{localize "PENDRAGON.MajorWound"}}</span><span>{{actor.system.derived.majorWound}}</span>
-                            <span>{{localize "PENDRAGON.Unconcious"}}</span><span>{{actor.system.derived.unconscious}}</span>
+                    <section>
+                        <h2 class="header">
+                            {{localize "PENDRAGON.Health"}}
+                        </h2>
+                        <div class="health pen-container">
+                            <h3>
+                                <abbr title="{{localize "PENDRAGON.HitPoints"}}">
+                                    {{localize "PENDRAGON.HitPointsShort"}}
+                                </abbr>
+                                <input type="number" name="system.hp.value" value="{{actor.system.hp.value}}"/> / {{actor.system.hp.max}}
+                            </h3>
+                            <h5>
+                                Debilitated
+                                <input type="checkbox" name="system.debilitated" {{checked actor.system.debilitated}}/>
+                            </h5>
+                            <h4>
+                                Aggravated
+                                <input type="number" name="system.damage.aggravated" value="{{actor.system.damage.aggravated}}"/>
+                            </h4>
+                            <h4>
+                                Deterioration
+                                <input type="number" name="system.damage.deterioration" value="{{actor.system.damage.deterioration}}"/>
+                            </h4>
+                            <div class="health-derived pen-grid">    
+                                <span>{{localize "PENDRAGON.Healing"}}</span><span>{{actor.system.derived.healing}}</span>
+                                <span>{{localize "PENDRAGON.Knockdown"}}</span><span>{{actor.system.derived.knockdown}}</span>
+                                <span>{{localize "PENDRAGON.MajorWound"}}</span><span>{{actor.system.derived.majorWound}}</span>
+                                <span>{{localize "PENDRAGON.Unconcious"}}</span><span>{{actor.system.derived.unconscious}}</span>
+                            </div>
                         </div>
-                    </div>
+                    </section>
 
                     {{!-- Wounds --}}
                     <table class="wounds pen-table pen-container">
@@ -223,6 +253,42 @@
 
         {{!-- History Tab --}}
         <div class="tab history" data-group="primary" data-tab="history">
+            {{!-- Events --}}
+            <section>
+                <h2 class="header">
+                    {{localize "PENDRAGON.Events"}}
+                    <button class="item-create" data-type="event"><i class="fas fa-plus"></i></button>
+                </h2>
+                <table class="events pen-table pen-container">
+                    <thead>
+                        <tr>
+                            <th>{{localize "PENDRAGON.Date"}}</th>
+                            <th></th>
+                            <th>{{localize "PENDRAGON.Glory"}}</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#each inventory.event}}
+                        <tr>
+                            <td>
+                                {{this.system.date}}
+                            </td>
+                            <td>
+                                {{this.name}}
+                            </td>
+                            <td>
+                                {{this.system.glory}}
+                            </td>
+                            <td>
+                                <a class="item-edit" data-item-id="{{this._id}}"><i class="fas fa-pen-to-square"></i></a>
+                                <a class="item-delete" data-item-id="{{this._id}}"><i class="fas fa-xmark"></i></a>
+                            </td>
+                        </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
+            </section>
             {{!-- Knightly Events --}}
             <div class="flex-list">
                 {{#each actor.system.history.knightly}}
